<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.babe.caculatordemo.CaculatorActivity" >

    <EditText
        android:id="@+id/input"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/white_bg"
        android:editable="false"
        android:gravity="right|bottom" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/white_selector"
            android:gravity="right|bottom"
            android:text="@string/cancel"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/white_selector"
            android:gravity="right|bottom"
            android:text="@string/del"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/white_selector"
            android:gravity="right|bottom"
            android:text="@string/divide"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/white_selector"
            android:gravity="right|bottom"
            android:text="@string/multiply"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/white_selector"
            android:gravity="right|bottom"
            android:text="@string/seven"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/white_selector"
            android:gravity="right|bottom"
            android:text="@string/eight"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/white_selector"
            android:gravity="right|bottom"
            android:text="@string/nine"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/white_selector"
            android:gravity="right|bottom"
            android:text="@string/minus"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_four"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/white_selector"
            android:gravity="right|bottom"
            android:text="@string/four"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/white_selector"
            android:gravity="right|bottom"
            android:text="@string/five"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_six"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/white_selector"
            android:gravity="right|bottom"
            android:text="@string/six"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/white_selector"
            android:gravity="right|bottom"
            android:text="@string/plus"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_one"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:paddingRight="10dp"
            android:paddingBottom="10dp"
                    android:background="@drawable/white_selector"
                    android:gravity="right|bottom"
                    android:text="@string/one"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btn_two"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:paddingRight="10dp"
            android:paddingBottom="10dp"
                    android:background="@drawable/white_selector"
                    android:gravity="right|bottom"
                    android:text="@string/two"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btn_three"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:paddingRight="10dp"
            android:paddingBottom="10dp"
                    android:background="@drawable/white_selector"
                    android:gravity="right|bottom"
                    android:text="@string/three"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_zero"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:background="@drawable/white_selector"
                    android:gravity="right|bottom"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/zero"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btn_dot"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/white_selector"
                    android:gravity="right|bottom"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/dot"
                    android:textSize="20dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="60dp"
            android:layout_height="140dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/orange_selector"
            android:gravity="right|bottom"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:text="@string/equal"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>